--- a/src/_main.scss
+++ b/src/_main.scss
@@ -1,3 +1,5 @@
+@import "node_modules/elr-scss-functions/src/main";
+
 // Layout Classes
 @mixin elr-reset-element() {
   margin: 0;
@@ -33,8 +35,64 @@
 
 // Centers an element horizontally on the page
 
-@mixin elr-center-block($config: ()) {
+@mixin elr-center-block() {
   margin-left: auto !important;
   margin-right: auto !important;
   float: none !important;
+  display: block;
+}
+
+@mixin elr-center-flex() {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@mixin elr-position($config: ()) {
+  $config: extend(
+    (
+      x: "center",
+      y: "center",
+    ),
+    $config
+  );
+  $x: map-get($config, x);
+  $y: map-get($config, y);
+
+  position: absolute;
+  margin: 0;
+
+  @if ($x == "center" and $y == "center") {
+    top: 50% !important;
+    left: 50% !important;
+    transform: translate(-50%, -50%) !important;
+  } @else if ($x == "center" and $y == "top") {
+    left: 50% !important;
+    top: 0;
+    transform: translateX(-50%) !important;
+  } @else if ($x == "center" and $y == "bottom") {
+    left: 50% !important;
+    bottom: 0;
+    top: auto;
+    transform: translateX(-50%) !important;
+  } @else if ($x == "left" and $y == "center") {
+    top: 50% !important;
+    left: 0;
+    transform: translateY(-50%) !important;
+  } @else if ($x == "right" and $y == "center") {
+    top: 50% !important;
+    right: 0;
+    left: auto;
+    transform: translateY(-50%) !important;
+  }
+}
+
+@mixin elr-disable-scrollbars {
+  &::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* Chrome/Safari/Webkit */
+  }
+
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE 10+ */
 }
