--- a/src/_main.scss
+++ b/src/_main.scss
@@ -96,3 +96,41 @@
   scrollbar-width: none; /* Firefox */
   -ms-overflow-style: none; /* IE 10+ */
 }
+
+@mixin elr-containers($config: ()) {
+  $max-width: map-get($config, max-width);
+
+  .container-full {
+    background-color: $lightest-blue;
+
+    .content {
+      padding: 0;
+      margin: auto;
+    }
+  }
+  .container-fixed {
+    background-color: $lightest-blue;
+
+    .content {
+      max-width: $max-width;
+      margin: auto;
+      padding: ($base-fontsize * 2);
+
+      @media (max-width: $mobile-width) {
+        padding: 0;
+      }
+    }
+  }
+
+  .container-padded {
+    background-color: $lightest-blue;
+
+    .content {
+      padding: $base-fontsize ($base-fontsize * 2);
+
+      @media (max-width: $mobile-width) {
+        padding: $base-fontsize;
+      }
+    }
+  }
+}
